Thu Dec 28 18:43:37 CST 2000 Adam Heath <doogie@debian.org>

  * lib/database.c: Fix minor memleak in used function hashreport.
    Thanks to Adrian Bridgett <bridgett@debian.org>.

Wed Dec 27 14:54:55 CST 2000 Adam Heath <doogie@debian.org>

  * lib/parse.c:  Removed use of getc(), and instead use pointers
    into a gigantic memory buffer(either thru mmap, or by copying
    into a large buffer(#define PARSE_MMAP)).  Nice little speedup,
    and also had the added benefit of removing varbuf* code from
    parsedb().

Wed Dec 27 04:58:22 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c: Removed use of varbuf* code from f_dependency(),
    for a speedup.

Wed Dec 27 04:55:14 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c: Detect and issue an error when a space is in a
    version.

Wed Dec 27 04:00:32 CST 2000 Adam Heath <doogie@debian.org>

  * lib/nfmalloc.c, include/dpkg-db.h: Added nfstrnsave().

Tue Dec 26 17:07:11 CST 2000 Adam Heath <doogie@debian.org>

  * lib/md5.c, lib/md5.h: Oops, forgot to add these files.

Tue Dec 26 08:28:17 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Removed extraneous debug prints, that displayed the
    state of all force options.  Doh!

Tue Dec 26 04:34:02 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c, lib/parsehelp.c, include/dpkg-db.h: Increased the
    speed of convert_string() by a factor of 2, by storing the length
    of each string inside the struct(this function is used to convert
    strings into integer values).

Tue Dec 26 03:43:17 CST 2000 Adam Heath <doogie@debian.org>

  * acconfig.h, config.h.bot, configure.in, main/filesdb.c,
    automake/sysinfo.m4(removed): Removed all references to
    sysinfo().

Tue Dec 26 03:24:38 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c, main/files.c: Removed --smallmem code.

Mon Dec 25 00:46:47 CST 2000 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Don't use FILE * in mdfile.
