@@ -1,3 +1,8 @@
+Fri Dec 29 12:39:09 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/parse.c: Properly parse control files that only have one
+    paragraph, which means no double ending new line.
+
 Thu Dec 28 18:43:37 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/database.c: Fix minor memleak in used function hashreport.
